--- a/app.json
+++ b/app.json
@@ -2,6 +2,9 @@
   "expo": {
     "name": "ZinApp",
     "slug": "zinapp",
+    "experiments": {
+      "tsconfigPaths": true
+    },
     "version": "0.1.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -12,7 +15,7 @@
       "backgroundColor": "#ffffff"
     },
     "assetBundlePatterns": [
-      "**/*"
+      "assets/**/*"
     ],
     "ios": {
       "supportsTablet": true
