--- a/package.json
+++ b/package.json
@@ -11,25 +11,26 @@
     "dev": "concurrently \"npm run start\" \"npm run mock-api\""
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/stack": "^6.3.20",
-    "expo": "~50.0.5",
-    "expo-status-bar": "~1.11.1",
-    "expo-haptics": "~12.8.1",
-    "lottie-react-native": "6.5.1",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
+    "expo": "~52.0.0",
+    "expo-haptics": "~13.0.1",
+    "expo-status-bar": "~1.12.1",
+    "lottie-react-native": "6.7.0",
     "nativewind": "^4.0.1",
     "react": "18.2.0",
-    "react-native": "0.73.2",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-maps": "1.8.0", 
-    "react-native-reanimated": "~3.6.1",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0"
+    "react-native": "0.75.3",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-maps": "1.14.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "~3.31.1",
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.2.79",
+    "babel-plugin-module-resolver": "^5.0.2",
     "concurrently": "^8.2.2",
     "json-server": "^1.0.0-alpha.21",
     "tailwindcss": "^3.4.1",
