--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-status-bar": "~1.12.1",
     "lottie-react-native": "6.7.0",
     "nativewind": "^4.0.1",
+    "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-native": "0.75.3",
     "react-native-gesture-handler": "~2.16.1",
@@ -33,7 +34,7 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "concurrently": "^8.2.2",
     "json-server": "^1.0.0-alpha.21",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.3.0"
   },
   "private": true
