docs: Document unresolved twrnc module resolution error
Updated journal.md and KNOWN_ISSUES.md to reflect the persistent Metro error 'Unable to resolve module ../twrnc' despite code using direct import and aggressive cache clearing. Pausing twrnc migration for external review.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "jsx": "react-native", // Explicitly set JSX mode for React Native
     "baseUrl": ".",
     "paths": {
       "*": ["*"],
