--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
     "expo-haptics": "~13.0.1",
     "expo-status-bar": "~1.12.1",
     "lottie-react-native": "6.7.0",
-    "nativewind": "^4.0.1",
-    "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-native": "0.75.3",
     "react-native-gesture-handler": "~2.16.1",
@@ -26,7 +24,8 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "~3.31.1",
-    "react-native-svg": "15.2.0"
+    "react-native-svg": "15.2.0",
+    "twrnc": "^4.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -34,7 +33,6 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "concurrently": "^8.2.2",
     "json-server": "^1.0.0-alpha.21",
-    "tailwindcss": "^3.3.2",
     "typescript": "^5.3.0"
   },
   "private": true
