chore: Update dependencies and document TypeError investigation
Executed cleanup plan: removed NativeWind/configs, purged caches, updated gitignore. Updated react-native-screens, resolving 'large' error. App now renders LandingScreen but encounters TypeError on user fetch. Added detailed logging to apiService.getUserById, confirming error occurs during fetch/response processing. Updated journal and known issues. Committing state for review.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 node_modules/
 .expo/
 .expo-shared/
+.cache/
 dist/
 build/
 coverage/
@@ -11,4 +12,3 @@ coverage/
 .vscode/
 .idea/
 *.DS_Store
-    
