Implement typography system with custom fonts
- Add Inter font family (Regular, Medium, SemiBold, Bold) as fallback for Uber Move
- Configure font loading in App.tsx with expo-font and expo-splash-screen
- Update typography.ts with proper font families, sizes, and line heights
- Refactor Typography component to use the new typography system
- Update Button component with animation (bounce on tap) and proper styling
- Update Card component to match design specs
- Update Screen and Header components to use the new typography system
- Update colors.ts with the correct color palette from design specs
- Create spacing.ts with a 4pt grid system based on design specs
- Update journal.md with progress

--- a/app.json
+++ b/app.json
@@ -17,6 +17,24 @@
     "assetBundlePatterns": [
       "assets/**/*"
     ],
+    "fonts": [
+      {
+        "asset": "./assets/fonts/Inter-Regular.ttf",
+        "family": "Inter"
+      },
+      {
+        "asset": "./assets/fonts/Inter-Medium.ttf",
+        "family": "Inter-Medium"
+      },
+      {
+        "asset": "./assets/fonts/Inter-SemiBold.ttf",
+        "family": "Inter-SemiBold"
+      },
+      {
+        "asset": "./assets/fonts/Inter-Bold.ttf",
+        "family": "Inter-Bold"
+      }
+    ],
     "ios": {
       "supportsTablet": true
     },
