--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "expo": "~52.0.0",
+    "expo-font": "^13.0.4",
     "expo-haptics": "~13.0.1",
+    "expo-splash-screen": "^0.29.22",
     "expo-status-bar": "~1.12.1",
     "lottie-react-native": "6.7.0",
     "react": "18.2.0",
