--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.2.0",
+    "react-native-svg-transformer": "^1.5.0",
+    "react-native-vector-icons": "^10.2.0",
     "twrnc": "^4.6.1"
   },
   "devDependencies": {
