--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~52.0.0",
     "expo-font": "^13.0.4",
     "expo-haptics": "~13.0.1",
+    "expo-linear-gradient": "^14.0.2",
     "expo-splash-screen": "^0.29.22",
     "expo-status-bar": "~1.12.1",
     "lottie-react-native": "6.7.0",
