--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-splash-screen": "^0.29.22",
     "expo-status-bar": "~1.12.1",
     "lottie-react-native": "6.7.0",
+    "moti": "^0.30.0",
     "react": "18.2.0",
     "react-native": "0.75.3",
     "react-native-gesture-handler": "~2.16.1",
