--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-native": "0.75.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "1.14.0",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.2.0",
