--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "~4.4.0",
+    "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-vector-icons": "^10.2.0",
@@ -41,5 +42,9 @@
     "json-server": "^1.0.0-alpha.21",
     "typescript": "^5.3.0"
   },
-  "private": true
+  "private": true,
+  "overrides": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  }
 }
