--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moti": "^0.30.0",
     "react": "18.2.0",
     "react-native": "0.75.3",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "1.14.0",
     "react-native-reanimated": "^3.16.1",
