feat: implement Sprint 1 foundation tasks
Implements key foundational elements based on the revised plan:
- Adds basic widget test for ZinButton.
- Creates LocalStorageService using shared_preferences.
- Updates db.json with challenges and streak fields.
- Adds Windows script for json-server and starts server.
- Adds dio dependency.
- Creates RemoteDataSource interfaces and implementations for User, Stylist, Post, Comment, Booking, and Gamification entities, connecting to json-server.
- Creates Badge and Challenge models.
- Scaffolds LoginScreen UI.
- Implements AuthRepository to connect AuthProvider to datasources.
- Updates AuthProvider to use AuthRepository.
- Temporarily modifies AuthState to use User instead of UserProfile (TODO: Refactor).
- Runs build_runner to generate necessary files.

This completes the setup for the mock backend, persistence, and basic auth flow scaffolding.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,11 +52,14 @@ dependencies:
   shimmer: ^3.0.0 # Loading effects
   lottie: ^3.0.0 # Lottie animations
   intl: ^0.19.0 # Internationalization
+  dio: ^5.5.0+1 # HTTP client for API calls
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^5.4.4 # Or latest compatible version for mocking
+  # build_runner: ^2.4.11 # Removed duplicate entry
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
